--- a/index.html
+++ b/index.html
@@ -2,12 +2,228 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Reloj Mundial</title>
+	<title>Movies for Categories</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	
+	<header>
+		<div class="container">
+			<h1>CINE ALIVANE</h1>
+		</div>
+	</header>
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-xs-12"><h3>Elige la categoria</h3></div>
+				<div class="col-sm-6 col-xs-12">
+					<div class="btn-group">
+						<button type="button" class="btn btn-default dropdown-toggle"
+						          data-toggle="dropdown">
+						    Categorias<span class="caret"></span>
+						</button>
+						 
+						<ul class="dropdown-menu" role="menu">
+						    <li><a href="#">Todas</a></li>
+						    <li><a href="#">Acción</a></li>
+						    <li><a href="#">Comedia</a></li>
+						    <li><a href="#">Crimen</a></li>
+						    <li><a href="#">Familiar</a></li>
+						    <li><a href="#">Terror</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<dection>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-2 col-xs-4">
+					<div class = "accion">
+						<img src="img/accion/anillos.jpg">
+						<p>Señor De Los Anillo</p>
+					</div>
+					<div class = "accion">
+						<img src="img/accion/cazador.jpg">
+						<p>El cazador</p>
+					</div>
+					<div class = "accion">
+						<img src="img/accion/egipto.jpg">
+						<p>dioses de egipto</p>
+					</div>
+					<div class = "accion">
+						<img src="img/accion/independencia.jpg">
+						<p>Dia de la Independencia</p>
+					</div>
+					<div class = "accion">
+						<img src="img/accion/insurgentes.jpg">
+						<p>SInsurgentes</p>
+					</div>
+					<div class = "accion">
+						<img src="img/accion/investigacion.jpg">
+						<p>Investigacion</p>
+					</div>
+					<div class = "familiar">
+						<img src="img/familiar/guardianes.jpg">
+						<p>guardianes</p>
+					</div>
+				</div>
+				<div class="col-sm-2 col-xs-4">
+					<div class = "comedia">
+						<img src="img/comedia/infiltrados.jpg">
+						<p>Infiltrados</p>
+					</div>
+					<div class = "comedia">
+						<img src="img/comedia/jump.jpg">
+						<p>Jump</p>
+					</div>
+					<div class = "comedia">
+						<img src="img/comedia/vacaciones.jpg">
+						<p>Vacaciones</p>
+					</div>
+					<div class = "criminal">
+						<img src="img/criminal/jeruzalem.jpg">
+						<p>Jeruzalem</p>
+					</div>
+					<div class = "familiar">
+						<img src="img/familiar/angry.jpg">
+						<p>AngryBirds</p>
+					</div>
+					<div class = "familiar">
+						<img src="img/familiar/ave.jpg">
+						<p>Ave</p>
+					</div>
+					<div class = "terror">
+						<img src="img/terror/NoEstamos.jpg">
+						<p>NoEstamos</p>
+					</div>
+				</div>
+				<div class="col-sm-2 col-xs-4">
+					<div class = "criminal">
+						<img src="img/criminal/alivi.jpg">
+						<p>Alive</p>
+					</div>
+					<div class = "criminal">
+						<img src="img/criminal/chapo.jpg">
+						<p>El chapo</p>
+					</div>
+					<div class = "criminal">
+						<img src="img/criminal/criminal.jpg">
+						<p>Criminal</p>
+					</div>
+					<div class = "criminal">
+						<img src="img/criminal/finest.jpg">
+						<p>finest</p>
+					</div>
+					<div class = "criminal">
+						<img src="img/criminal/heat.jpg">
+						<p>Heat</p>
+					</div>
+					<div class = "criminal">
+						<img src="img/criminal/london.jpg">
+						<p>London</p>
+					</div>
+					<div class = "familiar">
+						<img src="img/familiar/peluda.jpg">
+						<p>peluda</p>
+					</div>
+				</div>
+				<div class="col-sm-2 col-xs-4">
+					<div class = "familiar">
+						<img src="img/familiar/heidi.jpg">
+						<p>Heidi</p>
+					</div>
+					<div class = "familiar">
+						<img src="img/familiar/Hotel.jpg">
+						<p>Hotel</p>
+					</div>
+					<div class = "familiar">
+						<img src="img/familiar/justin.jpg">
+						<p>justin</p>
+					</div>
+					<div class = "familiar">
+						<img src="img/familiar/Oddball.jpg">
+						<p>Oddball</p>
+					</div>
+					<div class = "familiar">
+						<img src="img/familiar/pequenos.jpg">
+						<p>pequenos</p>
+					</div>
+					<div class = "familiar">
+						<img src="img/familiar/pets.jpg">
+						<p>pets</p>
+					</div>
+					<div class = "familiar">
+						<img src="img/familiar/secretary.jpg">
+						<p>secretary</p>
+					</div>
+				</div>
+				<div class="col-sm-2 col-xs-4">
+					<div class = "terror">
+						<img src="img/terror/conjure.jpg">
+						<p>conjure</p>
+					</div>
+					<div class = "terror">
+						<img src="img/terror/exor.jpg">
+						<p>exor</p>
+					</div>
+					<div class = "terror">
+						<img src="img/terror/huerfana.jpg">
+						<p>huerfana</p>
+					</div>
+					<div class = "terror">
+						<img src="img/terror/insidios.jpg">
+						<p>insidios</p>
+					</div>
+					<div class = "terror">
+						<img src="img/terror/maldi.jpg">
+						<p>maldi</p>
+					</div>
+					<div class = "terror">
+						<img src="img/terror/nino.jpg">
+						<p>nino</p>
+					</div>
+					<div class = "terror">
+						<img src="img/terror/sinister.jpg">
+						<p>sinister</p>
+					</div>
+				</div>
+				<div class="col-sm-2 col-xs-4">
+					<div class = "accion">
+						<img src="img/accion/scorch.jpg">
+						<p>Pelicula</p>
+					</div>
+					<div class = "accion">
+						<img src="img/accion/tarzan.jp.jpg">
+						<p>Tarzan</p>
+					</div>
+					<div class = "comedia">
+						<img src="img/comedia/agente.jpg">
+						<p>Agente</p>
+					</div>
+					<div class = "comedia">
+						<img src="img/comedia/deadpool.jpg">
+						<p>DeadPool</p>
+					</div>
+					<div class = "criminal">
+						<img src="img/criminal/animal.jpg">
+						<p>Animal</p>
+					</div>
+					<div class = "criminal">
+						<img src="img/criminal/capvi.jpg">
+						<p>Capvi</p>
+					</div>
+					<div class ="accion">
+						<img src="img/accion/viaje.jpg">
+						<p>Viaje</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</dection>
 
 	
 
@@ -16,7 +232,6 @@
 
 
 	<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>  
-
 	<script src="js/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
