insertado de js y nuea page      en action

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 			<div class="row">
 				<div class=" col-xs-6 col-lg-4">
 					<div class = "accion">
-						<img src="img/accion/anillos.jpg">
-						<p>Señor De Los Anillo</p>
+						<a href="accion.html" class="a1">
+							<img  src="img/accion/anillos.jpg">
+							<p>Señor De Los Anillo</p>
+						</a>
 					</div>
 					<div class = "comedia">
 						<img src="img/comedia/infiltrados.jpg">
@@ -70,8 +72,10 @@
 						<p>Jump</p>
 					</div>
 					<div class = "accion">
-						<img src="img/accion/insurgentes.jpg">
-						<p>SInsurgentes</p>
+						<a href="accion.html" class="a2">
+							<img src="img/accion/insurgentes.jpg">
+							<p>SInsurgentes</p>
+						</a>
 					</div>
 					<div class = "criminal">
 						<img src="img/criminal/jeruzalem.jpg">
@@ -96,8 +100,10 @@
 						<p>Agente</p>
 					</div>
 					<div class = "accion">
-						<img src="img/accion/investigacion.jpg">
-						<p>Investigacion</p>
+						<a href="accion.html" class="a3">
+							<img src="img/accion/investigacion.jpg">
+							<p>Investigacion</p>
+						</a>
 					</div>
 					<div class = "familiar">
 						<img src="img/familiar/peluda.jpg">
@@ -118,8 +124,10 @@
 						<p>sinister</p>
 					</div>
 					<div class = "accion">
-						<img src="img/accion/egipto.jpg">
-						<p>dioses de egipto</p>
+						<a href="accion.html" class="a4">
+							<img src="img/accion/egipto.jpg">
+							<p>dioses de egipto</p>
+						</a>
 					</div>
 					<div class = "criminal">
 						<img src="img/criminal/alivi.jpg">
@@ -144,14 +152,18 @@
 						<p>Animal</p>
 					</div>
 					<div class = "accion">
-						<img src="img/accion/independencia.jpg">
-						<p>Dia de la Independencia</p>
+						<a href="accion.html" class="a5">
+							<img src="img/accion/independencia.jpg">
+							<p>Dia de la Independencia</p>
+						</a>
 					</div>
 				</div>
 				<div class=" col-xs-6 col-lg-4">
 					<div class = "accion">
-						<img src="img/accion/tarzan.jp.jpg">
-						<p>Tarzan</p>
+						<a href="accion.html" class="a6">
+							<img src="img/accion/tarzan.jp.jpg">
+							<p>Tarzan</p>
+						</a>
 					</div>
 					<div class = "criminal">
 						<img src="img/criminal/london.jpg">
