insertado de trailer

--- a/accion.html
+++ b/accion.html
@@ -45,8 +45,7 @@
 					<iframe width="100%" height="315" src="https://www.youtube.com/embed/wRe0hneqQdA" frameborder="0" allowfullscreen></iframe>
 				</div>
 				<div class="col-xs-12 col-lg-6">
-					<p>La historia de Insurgente comienza exactamente donde terminó la primera: la guerra ha estallado y nuevas alianzas se han formado para tomar parte en ella. Después de que el día de iniciación, en que el Tris Prior debía elegir la facción a la que quería pertenecer, se convirtiese en un total desastre, la protagonista centrará toda su fuerza y voluntad en proteger a sus seres queridos. Además deberá enfrentarse a las dudas que tiene sobre desdicha y benevolencia, política y amor e identidad y lealtad, lo cual hará que su corazón se debata entre varios dilemas.
-					Las cinco facciones en las que se divide la sociedad han entrado en conflicto, lo que conlleva a que las decisiones tomadas para gobernarlas sean más drásticas y heterodoxas que de costumbre. Tris, por su parte, ya no es la que era, sino que se ha vuelto más dura y despiadada, y acabará viéndose obligada a llevar a cabo acciones que en ningún momento pensó que llegaría a realizar.</p>
+					<p>La historia de Insurgente comienza exactamente donde terminó la primera: la guerra ha estallado y nuevas alianzas se han formado para tomar parte en ella. Después de que el día de iniciación, en que el Tris Prior debía elegir la facción a la que quería pertenecer, se convirtiese en un total desastre, la protagonista centrará toda su fuerza y voluntad en proteger a sus seres queridos. Además deberá enfrentarse a las dudas que tiene sobre desdicha y benevolencia, política y amor e identidad y lealtad, lo cual hará que su corazón se debata entre varios dilemas.</p>
 				</div>
 			</div>
 		</div>
@@ -59,8 +58,7 @@
 					<iframe width="100%" height="315" src="https://www.youtube.com/embed/MxEw3elSJ8M" frameborder="0" allowfullscreen></iframe>
 				</div>
 				<div class="col-xs-12 col-lg-6">
-					<p>Actualmente Bob (Dwayne Johnson) es un letal agente de la CIA, pero en sus años de adolescencia fue víctima de acoso escolar, pues sus compañeros de la secundaria le solían intimidar por su sobrepeso. Sin embargo, en vez de hundirse, Bob decide entrenar y se transforma en un musculoso gigante que acabará trabajando para el servicio de inteligencia. Por su parte, Calvin (Kevin Hart) era la estrella de los deportes y el chico más popular de la escuela secundaria. Eso sí, hoy en día Calvin es un aburrido contable y vive añorando sus años de gloria. 
-
+					<p>
 					Cuando en la víspera de una reunión de antiguos alumnos Calvin se reúne con Bob, su sorpresa será enorme al descubrir que ese tímido chico que solía ser el perdedor de la escuela y al que todos acosaban se ha convertido en un asesino a sueldo de la Agencia Central de Inteligencia. Claro que el asombro será mayor cuando Calvin se vea completamente inmerso en el peligroso mundo del espionaje internacional. Para cuando la ex estrella de los deportes se dé cuenta del embrollo en el que se ha metido, ya será demasiado tarde. Los dos antiguos compañeros del instituto se verán arrastrados a un mundo de tiroteos, traiciones e investigación, que les obligará a jugarse el cuello en incontables ocasiones. Y es que los dos tendrán que conseguir sobrevivir mientras hacen frente a multitud de villanos. </p>
 				</div>
 			</div>
@@ -75,9 +73,6 @@
 				</div>
 				<div class="col-xs-12 col-lg-6">
 					<p>Durante la ceremonia de proclamación del rey Horus (Nikolaj Coster-Waldau), y después de matar a su padre Osiris (Bryan Brown), Set (Gerard Butler), el implacable dios de la oscuridad, se apodera del trono de Egipto. El malévolo Set decide usurpar el trono mediante un engañoso y sorpresivo golpe de estado en el que ataca a su sobrino Horus arrancándole los ojos y condenándole a un exilio voluntario. Egipto, el imperio que una vez pacífico y próspero, se hunde así en el caos y el conflicto, y sus súbditos se convierten en devotos esclavos. 
-
-					Pocos se atreven a rebelarse contra Set y acabar con la tiranía que ha sumido a Egipto en la desgracia. Pero, con la ayuda del héroe mortal Bek (Brenton Thwaites), el poderoso dios Horus va a tratar de detener los planes de su malvado tío Set. Influido por el amor a Zaya (Courtney Eaton), una esclava que cayó herida durante un intento de escape, el joven Bek ayudará a Horus a cambio de que este le devuelva la vida a su amada.
-
 					A lo largo de su travesía, cuyo objetivo es poner fin al caos que está destruyendo su cultura, el dios y el mortal lucharán contra toda clase de serpientes, esfinges y dioses gigantescos. Una historia de acción, aventura y romance basada en la antigua mitología egipcia.</p>
 				</div>
 			</div>
@@ -92,10 +87,7 @@
 				</div>
 				<div class="col-xs-12 col-lg-6">
 					<p>Siempre supimos que iban a volver. Han pasado veinte años desde la última invasión alienígena, y el temor de las naciones de la Tierra al regreso de los invasores extraterrestres ha dado lugar a la elaboración de un programa de defensa a escala global, que utiliza tecnología anlienígena recuperada para proteger al planeta y prepararse para un posible contraataque. 
-
-					Después de la guerra del 96, el ex presidente Thomas Whitmore (Bill Pullman) tiene pesadillas con los alienígenas y asegura que preparan su regreso, alertando a su hija Patricia (Maika Monroe) e incluso a la propia mandataria estadounidense, Elizabeth Lanford (Sela Ward). Sus temores se concretan y el mundo deberá afrontar otra invasión, una incluso más grande que la anterior.
-
-					Pero nada les puede preparar para enfrentarse a la avanzada fuerza sin precedentes de los alienígenas atacantes. Tan solo el ingenio de unos pocos valientes hombres y mujeres podrá evitar la destrucción del mundo, que se encuentra de nuevo al borde de la extinción total. Los terrícolas contarán con la ayuda de jóvenes como Jake Morrison (Liam Hemsworth) y Dylan Hiller (Jessie Usher), el hijo del capitán que salvó a la humanidad hace 20 años. Además están David Levinson (Jeff Goldblum) a cargo del Área 51, su padre Julius Levinson (Judd Hirsh), que realiza conferencias sobre su experiencia con extraterrestes, y el doctor Brackish Okun (Brent Spiner), que despierta de un coma de dos décadas desde el ataque anterior. ¿Estarán preparados los humanos para el contraataque? </p>
+					Pero nada les puede preparar para enfrentarse a la avanzada fuerza sin precedentes de los alienígenas atacantes. Tan solo el ingenio de unos pocos valientes hombres y mujeres podrá evitar la destrucción del mundo, que se encuentra de nuevo al borde de la extinción total.  </p>
 				</div>
 			</div>
 		</div>
