--- a/comedia.html
+++ b/comedia.html
@@ -9,6 +9,83 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<header>
+		<div class="container text-center">
+			<h1>CINE ALIVANE
+				 <i class="fa fa-times" aria-hidden="true"></i>
+			</h1>
+		</div>
+	</header>
+	<secion class="infiltrados">
+		<div class="container">
+			<div class="row">
+				<h2>INFILTRADOS</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/Oe-FJqxtfps" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Tiempo después, trabajando en un hotel de Zurich, Pine se encuentra con Roper, quien llega al hotel acompañado por su séquito de guardias. En estas circunstancias, Pine es contactado por la agente de inteligencia Burr (Olivia Colman) para formar parte de una importante misión que tiene como fin atrapar a Roper. Pine acepta el trabajo para vengar la muerte de su confidente, y pronto se ve enredado en una gran red de espías, traficantes y asesinos.</p>
+				</div>
+			</div>
+		</div>
+	</secion>
+	<secion class="jump">
+		<div class="container">
+			<div class="row">
+				<h2>21 JUMP STREET</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/XzkEwkftQ8o" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<P>Schmidt (Jonah Hill) y Jenko (Channing Tatum) son una pareja de recién graduados policías que trabajan en la labor de policías de parque y que al intentar atrapar a unos traficantes de drogas y no decirles sus derechos Miranda tienen que dejarlos ir, por lo que su jefe los manda de encubiertos a una escuela para que encuentren a la persona que vende drogas en ella. Schmidt y Jenko cambian sus nombres por los de Doug (Schmidt) y Brad (Jenko). Cuando llegan a la escuela hay un cambio en sus horarios y Doug va a las clases de teatro de Brad y Brad a las de química de Doug. Doug se hace popular y hace amistad con Erick (Dave Franco) uno de los distribuidores de drogas y con su novia Molly (Brie Larson), mientras Brad se hace amigo de los nerds de química. El par de amigos hacen una fiesta en su casa a la que acuden todos. Brad coge el celular de Erick y lo configura para que pueda escuchar todo lo que Erick hable. Para su mala suerte llegan los padres de Schmidt y hacen que todos salgan corriendo de la fiesta. </P>
+				</div>
+			</div>
+		</div>
+	</secion>
+	<secion class="agente">
+		<div class="container">
+			<div class="row">
+				<h2>AGENTE CONTRAINTELIGENTE</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/jq0Eh6t0teY" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Un implacable agente del MI6 británico (Mark Strong), del grupo de operaciones especiales, descubre que tiene un hermano (Sacha Baron Cohen) muy diferente a él: fanático del fútbol y protagonista de numerosos y disparatados altercados dado su peculiar y conflictivo carácter. (FILMAFFINITY)</p>
+				</div>
+			</div>
+		</div>
+	</secion>
+	<secion>
+		<div class="container">
+			<div class="row">
+				<h2>DEADPOOL</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/M_sA3F2-K78" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Después de alistarse en el ejército, Wade Wilson (Ryan Reynolds) comienza a realizar trabajos de mercenario, y acabará siendo agente de las Fuerzas Especiales de EE.UU. Ya retirado, en su vida civil se dedica a ser un "matón a sueldo", ayudando a gente que no puede defenderse por sí sola. Su vida transcurre de forma normal, junto a su novia Vanessa (Morena Baccarin), hasta que llega la terrible noticia de que está gravemente enfermo.</p>
+				</div>
+			</div>
+		</div>
+	</secion>
+	<secion>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-lg-6"></div>
+				<div class="col-xs-12 col-lg-6"></div>
+			</div>
+		</div>
+	</secion>
+	<secion>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-lg-6"></div>
+				<div class="col-xs-12 col-lg-6"></div>
+			</div>
+		</div>
+	</secion>
+
+
 	<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>  
 	<script src="js/main.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
