--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
 	<header>
 		<div class="container text-center">
 			<h1>CINE ALIVANE</h1>
@@ -43,16 +42,17 @@
 			<div class="row">
 				<div class=" col-xs-6 col-lg-4">
 					<div class = "accion">
-						<a href="accion.html" class="a1">
+						<a href="#" class="a1">
 							<img  src="img/accion/anillos.jpg">
 							<p>Señor De Los Anillo</p>
 						</a>
 					</div>
 					<div class = "comedia">
-						<img src="img/comedia/infiltrados.jpg">
-						<p>Infiltrados</p>
-					</div>
-					
+						<a href="#" class="c1">
+							<img src="img/comedia/infiltrados.jpg">
+							<p>Infiltrados</p>
+						</a>
+					</div>					
 					<div class = "familiar">
 						<img src="img/familiar/guardianes.jpg">
 						<p>guardianes</p>
@@ -68,11 +68,13 @@
 				</div>
 				<div class=" col-xs-6 col-lg-4">
 					<div class = "comedia">
-						<img src="img/comedia/jump.jpg">
-						<p>Jump</p>
+						<a href="#" class="c2">
+							<img src="img/comedia/jump.jpg">
+							<p>Jump</p>
+						</a>
 					</div>
 					<div class = "accion">
-						<a href="accion.html" class="a2">
+						<a href="#" class="a2">
 							<img src="img/accion/insurgentes.jpg">
 							<p>SInsurgentes</p>
 						</a>
@@ -96,11 +98,13 @@
 						<p>Criminal</p>
 					</div>
 					<div class = "comedia">
-						<img src="img/comedia/agente.jpg">
-						<p>Agente</p>
+						<a href="#" class="c3">
+							<img src="img/comedia/agente.jpg">
+							<p>Agente</p>
+						</a>
 					</div>
 					<div class = "accion">
-						<a href="accion.html" class="a3">
+						<a href="#" class="a3">
 							<img src="img/accion/investigacion.jpg">
 							<p>Investigacion</p>
 						</a>
@@ -124,7 +128,7 @@
 						<p>sinister</p>
 					</div>
 					<div class = "accion">
-						<a href="accion.html" class="a4">
+						<a href="#" class="a4">
 							<img src="img/accion/egipto.jpg">
 							<p>dioses de egipto</p>
 						</a>
@@ -134,8 +138,10 @@
 						<p>Alive</p>
 					</div>
 					<div class = "comedia">
-						<img src="img/comedia/deadpool.jpg">
-						<p>DeadPool</p>
+						<a href="#" class="c4">
+							<img src="img/comedia/deadpool.jpg">
+							<p>DeadPool</p>
+						</a>
 					</div>
 				</div>
 				<div class=" col-xs-6 col-lg-4">
@@ -152,7 +158,7 @@
 						<p>Animal</p>
 					</div>
 					<div class = "accion">
-						<a href="accion.html" class="a5">
+						<a href="#" class="a5">
 							<img src="img/accion/independencia.jpg">
 							<p>Dia de la Independencia</p>
 						</a>
@@ -160,7 +166,7 @@
 				</div>
 				<div class=" col-xs-6 col-lg-4">
 					<div class = "accion">
-						<a href="accion.html" class="a6">
+						<a href="#" class="a6">
 							<img src="img/accion/tarzan.jp.jpg">
 							<p>Tarzan</p>
 						</a>
